[workspace]
resolver = "2"

members = [
    "drink",
    "drink/test-macro",
    "drink-cli",
]

exclude = [
    "examples/",
]

[workspace.package]
authors = ["Cardinal"]
edition = "2021"
homepage = "https://github.com/Cardinal-Cryptography/drink"
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/Cardinal-Cryptography/drink"
version = "0.11.2"

[workspace.dependencies]
anyhow = { version = "1.0.71" }
cargo_metadata = { version = "0.18.1" }
clap = { version = "4.3.4" }
contract-build = { version = "4.0.0-rc.3" }
contract-metadata = { version = "4.0.0-rc.3" }
contract-transcode = { version = "4.0.0-rc.3" }
convert_case = { version = "0.6.0" }
crossterm = { version = "0.26.0" }
darling = { version = "0.20.3" }
parity-scale-codec = { version = "3.6.9" }
parity-scale-codec-derive = { version = "3.6.9" }
proc-macro2 = { version = "1" }
quote = { version = "1" }
ratatui = { version = "0.21.0" }
scale-info = { version = "2.10.0" }
serde_json = { version = "1.0" }
syn = { version = "2" }
thiserror = { version = "1.0.40" }
wat = { version = "1.0.71" }

# Substrate dependencies

frame-metadata = { version = "16.0.0" }
frame-support = { version = "28.0.0"}
frame-system = { version = "28.0.0" }
pallet-balances = { version = "28.0.0" }
pallet-contracts = { version = "27.0.0" }
pallet-contracts-uapi = { version = "5.0.0" }
pallet-timestamp = { version = "27.0.0"}
sp-core = { version = "28.0.0" }
sp-externalities = { version = "0.25.0" }
sp-io = { version = "30.0.0" }
sp-runtime-interface = { version = "24.0.0" }

# Local dependencies

drink = { version = "0.11.2", path = "drink" }
drink-test-macro = { version = "0.11.2", path = "drink/test-macro" }
