[package]
name = "drink-cli"
authors.workspace = true
edition.workspace = true
homepage.workspace = true
repository.workspace = true
version.workspace = true

[dependencies]
anyhow = { workspace = true }
clap = { workspace = true, features = ["derive"] }
crossterm = { workspace = true }
ratatui = { workspace = true, features = ["all-widgets"]  }

sp-runtime = { workspace = true, features = ["std"] }

drink = { workspace = true }
