[package]
name = "drink-cli"
authors.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true
version.workspace = true

[dependencies]
anyhow = { workspace = true }
clap = { workspace = true, features = ["derive"] }
crossterm = { workspace = true }
contract-transcode = { workspace = true }
ratatui = { workspace = true, features = ["all-widgets"]  }

pallet-contracts-primitives = { workspace = true }
sp-core = { workspace = true, features = ["serde"] }

drink = { workspace = true, features = ["session"] }
