[package]
name = "drink-cli"
authors.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
version.workspace = true
description = "A CLI for interacting with the `drink` environment"

[dependencies]
anyhow = { workspace = true }
clap = { workspace = true, features = ["derive"] }
crossterm = { workspace = true }
contract-build = { workspace = true }
contract-transcode = { workspace = true }
ratatui = { workspace = true, features = ["all-widgets"]  }
thiserror = { workspace = true }

ink_sandbox = { workspace = true }
drink = { workspace = true, features = ["session"] }
