[package]
name = "drink"
authors.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
version.workspace = true
description = "Minimal sufficient architecture that allows for a fully functional ink! contract development"

[dependencies]
contract-metadata = { workspace = true }
contract-transcode = { workspace = true, optional = true }
frame-metadata = { workspace = true }
frame-support = { workspace = true }
frame-system = { workspace = true }
pallet-balances = { workspace = true }
pallet-contracts = { workspace = true }
pallet-contracts-primitives = { workspace = true }
pallet-timestamp = { workspace = true }
parity-scale-codec = { workspace = true }
parity-scale-codec-derive = { workspace = true }
sp-externalities = { workspace = true }
sp-io = { workspace = true }
sp-runtime-interface = { workspace = true }

serde_json = { workspace = true }
scale-info = { workspace = true }
thiserror = { workspace = true }
wat = { workspace = true }

[features]
default = [
    # This is required for the runtime-interface to work properly in the std env.
    "std",
    "session"
]
session = ["contract-transcode"]
std = []
