[package]
name = "drink-test-macro"
authors.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
version.workspace = true
description = "Procedural macro providing a `#[drink::test]` attribute for `drink`-based contract testing"

[lib]
proc-macro = true

[dependencies]
darling = "0.20.3"
proc-macro2 = "1"
syn = { version = "2", features = ["full"] }
quote = "1"
