[package]
name = "drink-test-macro"
authors.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
version.workspace = true
description = "Procedural macro providing a `#[drink::test]` attribute for `drink`-based contract testing"

[lib]
proc-macro = true

[dependencies]
cargo_metadata = { workspace = true }
contract-build = { workspace = true }
contract-metadata = { workspace = true }
convert_case = { workspace = true }
proc-macro2 = { workspace = true }
syn = { workspace = true, features = ["full"] }
quote = { workspace = true }
